--- a/src/index.scss
+++ b/src/index.scss
@@ -1,14 +1,52 @@
+@import url(http://fonts.googleapis.com/css?family=Lato);
+@import "common.scss";
+
+@font-face {
+  font-family: ApexNew;
+  src: url("assets/fonts/ApexNew-Medium.otf") format("opentype");
+}
+
+@font-face {
+  font-family: ApexNew;
+  font-weight: bold;
+  src: url("assets/fonts/ApexNew-V2-Bold.otf") format("opentype");
+}
+
+@font-face {
+  font-family: ApexNew;
+  font-weight: bold;
+  font-style: italic;
+  src: url("assets/fonts/ApexNew-V2-BoldItalic.otf") format("opentype");
+}
+
+@font-face {
+  font-family: ApexNew;
+  font-weight: 100;
+  src: url("assets/fonts/ApexNew-Book.otf") format("opentype");
+}
+
+@font-face {
+  font-family: ApexNew;
+  font-weight: 100;
+  font-style: italic;
+  src: url("assets/fonts/ApexNew-BookItalic.otf") format("opentype");
+}
+
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-size: 18px;
+  font-family: Lato, $fallback-fonts;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+  h1 {
+    font-family: ApexNew, $fallback-fonts;
+    font-size: 42px;
+  }
+
+  h2 {
+    font-family: ApexNew, $fallback-fonts;
+    font-size: 32px;
+  }
 }
