More Homepage styling

--- a/src/app/modules/home/home.scss
+++ b/src/app/modules/home/home.scss
@@ -1,31 +1,17 @@
 @import '../../../common';
 
 #homepage{
+  background: transparent;
+  width: 100%;
+
   .container {
     padding: 0;
     margin: 0;
     width: 100%;
     max-width: 100%;
 
-    // mobile default
-    background: url('../../../assets/images/homepage_hero-sm-xhdpi.jpg') no-repeat;
-    background-position: right 20%;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+
   }
-
-  @media (min-width: $EMP-full-min) {
-    .container {
-      background-image: url('../../../assets/images/homepage_hero-lg-xhdpi.jpg');
-    }
-  }
-
-  text-align: center;
-  background: transparent;
-  width: 100%;
-
 
   .row {
     margin: 0;
@@ -34,10 +20,20 @@
 
   .titleRow {
     color: $EMP-white;
-    height: 700px;
+    height: 100vh;
     padding-top: 320px;
-    text-align: left;
-    width: 60%;
+    padding-right: 40%;
+
+    // mobile default
+    background: url('../../../assets/images/homepage_hero-sm-xhdpi.jpg') no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+
+    @media (min-width: $EMP-full-min) {
+      background-image: url('../../../assets/images/homepage_hero-lg-xhdpi.jpg');
+    }
 
     button {
       background: transparent;
@@ -53,12 +49,39 @@
     button:hover {
       background-color: $EMP-white;
       color: $EMP-dark-grey;
+      cursor: pointer;
     }
   }
 
   .infoRow {
     background: $EMP-white;
     width: 100%;
+
+    button {
+      background: $EMP-red;
+      color: $EMP-white;
+      border-radius: 5px;
+      border-width: 2px;
+      border-color: $EMP-red;
+      -webkit-transition-duration: 0.4s; /* Safari */
+      transition-duration: 0.4s;
+    }
+
+    button:hover {
+      background-color: $EMP-white;
+      color: $EMP-red;
+      cursor: pointer;
+    }
+  }
+
+  .footerRow {
+    text-align: center;
+    background: $EMP-light-grey;
+    color: $EMP-dark-grey;
+
+    a {
+      color: $EMP-dark-grey;
+    }
   }
 }
 
