Style order list

--- a/src/index.scss
+++ b/src/index.scss
@@ -49,4 +49,19 @@ body {
     font-family: ApexNew, $fallback-fonts;
     font-size: 32px;
   }
+
+  h3 {
+    font-family: ApexNew, $fallback-fonts;
+    font-size: 26px;
+  }
+
+  h4 {
+    font-family: ApexNew, $fallback-fonts;
+    font-size: 22px;
+  }
+
+  h5 {
+    font-family: ApexNew, $fallback-fonts;
+    font-size: 20px;
+  }
 }
