--- a/src/app/modules/order/orderPreview/orderPreview.scss
+++ b/src/app/modules/order/orderPreview/orderPreview.scss
@@ -1,12 +1,12 @@
 @import '../../../../common';
 
 
-.col-md-6 {
+.col-sm-6 {
   margin-bottom: 10px;
 }
 
 div.orderPreview {
-  border-color: $EMP-red;
+  border-color: $EMP-black;
   border-radius: 10px;
   border-width: 5px;
   background-color: $EMP-white;
