--- a/src/app/modules/user/details/userDetails.scss
+++ b/src/app/modules/user/details/userDetails.scss
@@ -14,7 +14,7 @@
 }
 
 div.welcomeCard {
-  border-color: $EMP-red;
+  border-color: $EMP-black;
   border-radius: 10px;
   border-width: 5px;
   background-color: $EMP-white;
