--- a/src/app/modules/common/loading/loading.scss
+++ b/src/app/modules/common/loading/loading.scss
@@ -8,8 +8,8 @@
   align-items: center;
 
   .loader {
-    border: 8px solid $EMP-light-grey; /* Light grey */
-    border-top: 8px solid $EMP-red; /* Blue */
+    border: 8px solid $EMP-light-grey;
+    border-top: 8px solid $EMP-red;
     border-radius: 50%;
     width: 60px;
     height: 60px;
