--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,7 @@
 @import url(http://fonts.googleapis.com/css?family=Lato);
 @import "common.scss";
 
+// use otf fonts
 @font-face {
   font-family: ApexNew;
   src: url("assets/fonts/ApexNew-Medium.otf") format("opentype");
@@ -32,6 +33,7 @@
   src: url("assets/fonts/ApexNew-BookItalic.otf") format("opentype");
 }
 
+// configure fonts for body
 body {
   margin: 0;
   padding: 0;
